--- a/automake.html
+++ b/automake.html
@@ -1544,33 +1544,30 @@ hello.exe: MS Windows PE 32-bit Intel 80386 console executable not relocatable
 <a name="index-Transforming-program-names"></a>
 <a name="index-Programs_002c-renaming-during-installation"></a>
 
-<pGNU Build System provides means to automatically rename
-executables and manpages before they are installed (see <a href="#Man-Pages">Man Pages</a>).
-This is especially convenient
-when installing a GNU package on a system that already has a
-proprietary implementation you do not want to overwrite.  For instance,
-you may want to install GNU <code>tar</code> as <code>gtar</code> so you can
-distinguish it from your vendor&rsquo;s <code>tar</code>.
+<p>GNU 构建系统提供了在可执行程序和帮助手册安装前对他们进行重命名的方法
+(见 <a href="#Man-Pages">帮助手册</a>).
+这点在你安装一个 GNU 软件包到一个已经有其他实现而且你不想覆盖掉的系统中时是非常方便的。
+比如，你或许会想把 GNU tar 安装为 gtar 来和你厂商提供的 tar 进行区别。
 </p>
-<p>This can be done using one of these three <code>configure</code> options.
+<p>这点可以通过以下三个 <code>configure</code> 选项之一来实现。
 </p>
 <dl compact="compact">
 <dt><samp>--program-prefix=<var>prefix</var></samp></dt>
 <dd><a name="index-_002d_002dprogram_002dprefix_003dprefix"></a>
-<p>Prepend <var>prefix</var> to installed program names.
+<p>增加前缀 <var>prefix</var> 到要安装的程序名。
 </p></dd>
 <dt><samp>--program-suffix=<var>suffix</var></samp></dt>
 <dd><a name="index-_002d_002dprogram_002dsuffix_003dsuffix"></a>
-<p>Append <var>suffix</var> to installed program names.
+<p>增加后缀 <var>suffix</var> 到要安装的程序名。
 </p></dd>
 <dt><samp>--program-transform-name=<var>program</var></samp></dt>
 <dd><a name="index-_002d_002dprogram_002dtransform_002dname_003dprogram"></a>
-<p>Run <code>sed <var>program</var></code> on installed program names.
+<p>在程序名上执行 <code>sed <var>program</var></code>
 </p></dd>
 </dl>
 
-<p>The following commands would install <samp>hello</samp>
-as <samp>/usr/local/bin/test-hello</samp>, for instance.
+<p>作为示例，以下命令将把 <samp>hello</samp>
+安装为 <samp>/usr/local/bin/test-hello</samp>。
 </p>
 <div class="example">
 <pre class="example">~/amhello-1.0 % <kbd>./configure --program-prefix test-</kbd>
@@ -1585,27 +1582,22 @@ as <samp>/usr/local/bin/test-hello</samp>, for instance.
 <a name="DESTDIR"></a>
 <div class="header">
 <p>
-向后：<a href="#Preparing-Distributions" accesskey="n" rel="next">Preparing Distributions</a>, 向前：<a href="#Renaming" accesskey="p" rel="previous">Renaming</a>, 向上：<a href="#Use-Cases" accesskey="u" rel="up">使用实例</a> &nbsp; [<a href="#SEC_Contents" title="Table of contents" rel="contents">目录</a>][<a href="#Indices" title="Index" rel="index">索引</a>]</p>
+向后：<a href="#Preparing-Distributions" accesskey="n" rel="next">Preparing Distributions</a>, 向前：<a href="#Renaming" accesskey="p" rel="previous">重命名</a>, 向上：<a href="#Use-Cases" accesskey="u" rel="up">使用实例</a> &nbsp; [<a href="#SEC_Contents" title="Table of contents" rel="contents">目录</a>][<a href="#Indices" title="Index" rel="index">索引</a>]</p>
 </div>
 <a name="Building-Binary-Packages-Using-DESTDIR"></a>
-<h4 class="subsection">2.2.10 Building Binary Packages Using DESTDIR</h4>
+<h4 class="subsection">2.2.10 使用 DESTDIR 编译二进制软件包</h4>
 <a name="index-DESTDIR"></a>
 
-<p>The GNU Build System&rsquo;s <code>make install</code> and <code>make uninstall</code>
-interface does not exactly fit the needs of a system administrator
-who has to deploy and upgrade packages on lots of hosts.  In other
-words, the GNU Build System does not replace a package manager.
+<p>GNU 构建系统的 <code>make install</code> 和 <code>make uninstall</code>接口并不能完全满足系统管理员在很多主机上部署和升级软件包的需求。
+换句话说，GNU 构建系统并不能取代软件包管理器。
 </p>
-<p>Such package managers usually need to know which files have been
-installed by a package, so a mere <code>make install</code> is
-inappropriate.
+<p>这样的软件包管理器通常需要知道一个软件包安装了哪些文件，因此一个简单的 <code>make install</code> 是不够的。
 </p>
 <a name="index-Staged-installation"></a>
 
-<p>The <code>DESTDIR</code> variable can be used to perform a staged
-installation.  The package should be configured as if it was going to
-be installed in its final location (e.g., <code>--prefix /usr</code>), but
-when running <code>make install</code>, the <code>DESTDIR</code> should be set to
+<p><code>DESTDIR</code> 变量可以被用来进行一个阶段性安装。
+软件包应该可以被配置为是否将被安装到最终位置
+(例如，<code>--prefix /usr</code>)，但是当执行 <code>make install</code> 时，the <code>DESTDIR</code> should be set to
 the absolute name of a directory into which the installation will be
 diverted.  From this directory it is easy to review which files are
 being installed where, and finally copy them to their final location
